# rust-chat

./: Cargo.toml  rust-chat.code-workspace
backend/: Cargo.toml
backend/src/: main.rs
chat-lib/: Cargo.toml
chat-lib/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  message_list.rs  send_dialog.rs  user_list.rs
